[package]
name = "bits"
version = "0.1.0"
edition = "2021"
description = "Ergonomic, fast bit/byte field types and macros for binary protocol codecs, with first-class binrw integration."
license = "MIT"
repository = "https://github.com/asyio/protocols"

[dependencies]
# The derive/attribute macros live in a sibling proc-macro crate (a proc-macro
# crate cannot also export runtime items). Re-exported below so users only
# depend on `bits`.
bits-macros = { path = "../bits-macros", version = "0.1.0" }
# Optional: when on, the macros emit binrw BinRead/BinWrite impls and this crate
# re-exports binrw for the generated code to reference. Off => a standalone,
# dependency-light bit/byte library (the path to dropping binrw entirely).
binrw = { version = "0.15.0", optional = true }

[features]
default = ["binrw"]
# Generate binrw integration for `#[bitfield]` / `#[derive(BitEnum)]` types.
binrw = ["dep:binrw", "bits-macros/binrw"]

[dev-dependencies]
# Used by integration tests that exercise the binrw bridge end-to-end against
# real protocol-shaped structs.
binrw = "0.15.0"
# Compile-fail UI tests: assert that `#[wire]` misuse (out-of-order or
# non-adjacent group members, marker conflicts, …) is rejected with a clear,
# well-spanned error. Regenerate snapshots with `TRYBUILD=overwrite`.
trybuild = "1.0"
# Statistical benchmarking with HTML reports.
criterion = { version = "0.5", features = ["html_reports"] }
# Sampling profiler wired into criterion: `--profile-time <secs>` emits a
# flamegraph SVG per benchmark instead of measuring.
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
# The crates `bits` replaces — used *only* in benchmarks to substantiate the
# "as fast as a hand-written shift/mask" claim before any migration. They are
# dev-dependencies, so they never enter a real build.
bitbybit = "1.3.3"
arbitrary-int = "1.3.0"
modular-bitfield-msb = "0.11.2"

# Examples that use binrw are gated; the codec-only ones build either way.
[[example]]
name = "protocol_header"
required-features = ["binrw"]

[[example]]
name = "ipv4_header"
required-features = ["binrw"]

[[example]]
name = "tcp_segment"
required-features = ["binrw"]

[[example]]
name = "wire_header"
required-features = ["binrw"]

[[bench]]
name = "bitfield_bench"
harness = false
