[package]
name = "bits"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Ergonomic, fast bit/byte field types and macros for binary protocol codecs, with first-class binrw integration."
[dependencies]
# The derive/attribute macros live in a sibling proc-macro crate (a proc-macro
# crate cannot also export runtime items). Re-exported below so users only
# depend on `bits`.
bits-macros = { workspace = true }
# Optional: when on, the macros emit binrw BinRead/BinWrite impls and this crate
# re-exports binrw for the generated code to reference. Off => a standalone,
# dependency-light bit/byte library (the path to dropping binrw entirely).
binrw = { workspace = true, optional = true }

[features]
default = ["binrw"]
# Generate binrw integration for `#[bitfield]` / `#[derive(BitEnum)]` types.
binrw = ["dep:binrw", "bits-macros/binrw"]
# Renders the `bnb` target-design rustdoc preview (doc-only modules, no code, not
# yet implemented). Review with:
#   RUSTC_WRAPPER= cargo doc -p bits --features doc-preview --no-deps --open
# Never part of a real build or the default docs.
doc-preview = []

[dev-dependencies]
# Used by integration tests that exercise the binrw bridge end-to-end against
# real protocol-shaped structs.
binrw.workspace = true
# Compile-fail UI tests: assert that `#[wire]` misuse (out-of-order or
# non-adjacent group members, marker conflicts, …) is rejected with a clear,
# well-spanned error. Regenerate snapshots with `TRYBUILD=overwrite`.
trybuild.workspace = true
# Property-based round-trip stress testing for `#[wire]` codecs.
proptest.workspace = true
# Statistical benchmarking with HTML reports.
criterion = { workspace = true, features = ["html_reports"] }
# Shared bench harness (testutil::bench::criterion); criterion stays a
# direct dev-dep for its macros/types.
testutil = { workspace = true, features = ["bench"] }
# The crates `bits` replaces — used *only* in benchmarks to substantiate the
# "as fast as a hand-written shift/mask" claim before any migration. They are
# dev-dependencies, so they never enter a real build.
bitbybit.workspace = true
arbitrary-int.workspace = true
modular-bitfield-msb.workspace = true

# Examples that use binrw are gated; the codec-only ones build either way.
[[example]]
name = "protocol_header"
required-features = ["binrw"]

[[example]]
name = "ipv4_header"
required-features = ["binrw"]

[[example]]
name = "tcp_segment"
required-features = ["binrw"]

[[example]]
name = "wire_header"
required-features = ["binrw"]

[[bench]]
name = "bitfield_bench"
harness = false

[lints]
workspace = true
