[package]
name = "bnb-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for the `bits` crate: #[bitfield] and #[derive(BitEnum)]."
[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true

[features]
# When enabled (propagated from `bits`'s `binrw` feature), the macros also emit
# binrw BinRead/BinWrite impls. The macro inspects this feature at expansion
# time to decide whether to generate that code.
binrw = []

[lints]
workspace = true
