[package]
name = "bnb-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for the `bnb` crate: #[bin], #[bitfield], #[derive(BitEnum)]."
[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
