[package]
name = "bnb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "An owned, bit-aware binary codec: fast bit/byte field types and the unified #[bin] macro."
[dependencies]
# The derive/attribute macros live in a sibling proc-macro crate (a proc-macro
# crate cannot also export runtime items). Re-exported below so users only
# depend on `bnb`.
bnb-macros = { workspace = true }
# Structured diagnostics: the `#[br(dbg)]` directive emits a `tracing` event (TRACE,
# target `bnb::dbg`). The lightweight facade only — the workspace logging stance
# (libraries emit events; the application installs the subscriber).
tracing = { workspace = true }
# Optional: zero-copy `Source`/`Sink` over the `bytes` crate (own a `Bytes` frame to
# decode, encode to a `Bytes` to send) — for async/tokio framing. Off by default so
# the core stays dependency-light; users off tokio never pull it in.
bytes = { workspace = true, optional = true }

[features]
default = []
# `bytes`-crate adapters (`BytesReader`/`BytesWriter`).
bytes = ["dep:bytes"]

[dev-dependencies]
# Compile-fail UI tests: assert that `#[bin]`/`#[bitfield]` misuse is rejected with
# a clear, well-spanned error. Regenerate snapshots with `TRYBUILD=overwrite`.
trybuild.workspace = true
# Property-based round-trip stress testing.
proptest.workspace = true
# Statistical benchmarking with HTML reports.
criterion = { workspace = true, features = ["html_reports"] }
# Shared bench harness (testutil::bench::criterion); criterion stays a
# direct dev-dep for its macros/types.
testutil = { workspace = true, features = ["bench"] }
# The crates `bnb` replaces — used *only* in benchmarks to substantiate the
# "as fast as a hand-written shift/mask" claim before any migration. They are
# dev-dependencies, so they never enter a real build.
bitbybit.workspace = true
arbitrary-int.workspace = true
modular-bitfield-msb.workspace = true

[[bench]]
name = "bitfield_bench"
harness = false

[[bench]]
name = "bitstream_bench"
harness = false

[lints]
workspace = true
