[package]
name = "dns"
version = "0.1.0"
description = "DNS (RFC 1034/1035) message codec on the bnb bit-aware codec — dual-use, from-scratch."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true
thiserror.workspace = true

[lints]
workspace = true
