[package]
name = "arp"
version = "0.1.1"
description = "ARP (RFC 826) packet codec on the bnb bit-aware codec — dual-use, from-scratch."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true
ethertype = { path = "../ethertype", version = "0.2.2" }
rawsock = { workspace = true, optional = true }

[features]
# A `rawsock::Protocol` impl on `ArpPacket` for L2 injection (an Ethernet payload). Off by default.
inject = ["dep:rawsock"]

[[example]]
name = "who_has"
required-features = ["inject"]

[dev-dependencies]
# The full-stack example/tests frame the ARP packet in a real Ethernet header.
ethernet = { path = "../ethernet", version = "0.1.4", features = ["inject"] }

[lints]
workspace = true
