[package]
name = "ethertype"
version = "0.2.0"
description = "EtherType — the 16-bit link-layer protocol identifier (IEEE 802.3), as a bnb BitEnum."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true

[lints]
workspace = true
