[package]
name = "icmp"
version = "0.1.2"
description = "ICMP (RFC 792) message-header codec on the bnb bit-aware codec — dual-use, from-scratch."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true
# Only for the `inject` feature (the rawsock composition/injection layer); off by default.
rawsock = { workspace = true, optional = true }

[features]
# A `rawsock::Protocol` layer (`Icmp<P>`) + the self-contained ICMP checksum, so a header can
# be composed with a payload and injected as a real message. Off by default.
inject = ["dep:rawsock"]

[[example]]
name = "ping"
required-features = ["inject"]

[dev-dependencies]
# The full-stack example/tests compose ICMP inside a real IP layer.
ip = { path = "../ip", features = ["inject"] }

[lints]
workspace = true
