[package]
name = "ip"
version = "0.2.0"
description = "IPv4 (RFC 791) header codec on the bnb bit-aware codec — dual-use, from-scratch."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true
# Only for the `inject` feature (the rawsock composition/injection layer); off by default.
rawsock = { workspace = true, optional = true }

[features]
# A `rawsock::Protocol` layer (`Ip<P>`) that wraps an L4 payload, sets the pseudo-header for
# its checksum, and computes the IPv4 header checksum + total length. Off by default.
inject = ["dep:rawsock"]

[[example]]
name = "inject_stack"
required-features = ["inject"]

[dev-dependencies]
# The full-stack example/tests compose IP over a real UDP layer.
udp = { path = "../../transport/udp", features = ["inject"] }

[lints]
workspace = true
