[package]
name = "udp"
version = "0.1.0"
description = "UDP (RFC 768) datagram-header codec on the bnb bit-aware codec — dual-use, from-scratch."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bnb.workspace = true

[lints]
workspace = true
